# deploying-machine-learning-models

./: .gitignore
section-04-research-and-development/: 01-machine-learning-pipeline-data-analysis.ipynb  02-machine-learning-pipeline-feature-engineering.ipynb  03-machine-learning-pipeline-feature-selection.ipynb  04-machine-learning-pipeline-model-training.ipynb  05-machine-learning-pPipeline-scoring-new-data.ipynb  06-feature-engineering-with-open-source.ipynb  pyproject.toml
section-04-research-and-development/titanic-assignment/: 01-predicting-survival-titanic-assignement.ipynb
section-05-production-model-package/: pyproject.toml
section-06-model-serving-api/house-prices-api/: pyproject.toml
